# cornerstoneAV

./: .gitignore  .gitmodules  CMakeLists.txt
learn_opengl/: CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.h  main.cpp  spinning_cube.cpp  wave_of_cubes.cpp
learn_opengl/models/: cube_model.cpp  cube_model.h
learn_opengl/shaders/: CMakeLists.txt  projection.vs  yellow.fs
learn_opengl/shaders/fragment/: passthru.fs
learn_opengl/shaders/vertex/: passthru.vs
playground/: CMakeLists.txt  deque.cpp
playground/learn_opengl/: CMakeLists.txt  wave_of_cubes.cpp
playground/learn_opengl/models/: CMakeLists.txt  cube_model.cpp  cube_model.h
playground/learn_opengl/shaders/: CMakeLists.txt
playground/sound/: CMakeLists.txt  sndfile_open_test.cpp
sound_playground/: CMakeLists.txt  portaudio_play_music_test.cpp  visualizer_test.cpp
src/: CMakeLists.txt  main.cpp
